# o3api

./: .gitignore  .stestr.conf  CITATION.cff  CONTRIBUTING.md  Dockerfile  Jenkinsfile  LICENSE  README.md  codemeta.json  compose-example.yml  create_meta.py  docker_job_example.sh  eosc.sh  o3api+jupyter-example.ipynb  processing.py  readthedocs.yaml  requirements.txt  setup.cfg  start.sh  test-requirements.txt  tox.ini  udocker_job_example.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: github-to-gitlab.yml
.gitlab/issue_templates/: Bug.md  FeatureRequest  Story.md
.sqa/: config-docs.yml  config.yml  docker-compose.yml  update-config-yml
Data/: .gitignore
Examples/: plot_o3.py
Examples/Data/: era5_ozone_mass_mixing_ratio_zm_30.nc
docker/: Dockerfile  Dockerfile.cicd  docker-compose.yaml  docker-compose.yml  docker_o3as_example.sh  nsupdate-fedcloud.sh  o3as-docker-example.sh
docs/source/: apiendpoints.rst  apireference.rst  conf.py  index.rst  introduction.rst  (+2 more)
k8s/: cluster_issuer.yml  o3api-deployment.yml  o3api-hpa.yml  o3api-ingress.v2.yml  o3api-ingress.yml  o3api-nfs.yml  o3api-service.yml  o3api-test.yml  o3api.yml  o3as-api-test.yml  o3as-api.yml  o3as-ingress.yml
o3api/: __init__.py  api.py  combine-0.py  combine.py  config.py  debug.py  ds_load.py  load.py  loadmeta.py  plothelpers.py  plots.py  prepare.py  swagger.right.yml  swagger.yml  tco3_zm.py  vmro3_zm.py
o3as/: __init__.py  api.py  combine-0.py  combine.py  config.py  eosc.sh  plothelpers.py  plots.py  processing.py  swagger.yml
src/: eosc.sh
(+6 files in other folders)
