[metadata]
name = o3as
summary = O3AS service to analyse ozone projections
description-file =
    README.md
author = KIT-IMK
author-email = tobias.kerzenmacher@kit.edu
version = 0.1.0
license = MIT
home-page = https://git.scc.kit.edu/synergy.o3as/o3as
classifier =
    Intended Audience :: Climate community
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[files]
packages =
    o3as
