[metadata]
name = o3api
summary = REST API for the O3as service to analyse Ozone projections
description-file =
    README.md
author = KIT-IMK, KIT-SCC
author-email = tobias.kerzenmacher@kit.edu, borja.sanchis@kit.edu, valentin.kozlov@kit.edu
version = 0.6.0
license = GNU LGPLv3
home-page = https://git.scc.kit.edu/synergy.o3as/o3api
classifier =
    Intended Audience :: Climate community
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
[files]
packages =
    o3api
